# Url-Shortner

./: .pre-commit-config.yaml  docker-compose.yaml  pyproject.toml  redis.pem
flutter_frontend/: README.md  analysis_options.yaml  pubspec.yaml
src/: .env.sample
src/apps/shortener/: apis.py  controllers.py  enums.py  models.py  schemas.py
src/core/: config.py  events.py  main.py  router.py
src/middlewares/: response_schema.py
src/migrations/: env.py
src/migrations/versions/: 10fcacf444f5_add_click_count.py  310fb07545fb_add_max_clicks_to_shortened_url.py  48e88904ee6f_add_custom_domain_to_shortenedurl.py  7fb14d84937a_support_duration_in_mins_hours_days_.py  b47b34e94f97_.py
src/services/: campaign_services.py  database.py  location_service.py  redis.py  visit_service.py
src/utils/: geo_utils.py  system_utils.py
